--- a/styles/components/Login.scss
+++ b/styles/components/Login.scss
@@ -1,12 +1,18 @@
-@import '../main';
+@import "../main";
 
 .container {
+  background-color: red;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+
+  overflow: scroll;
+  overflow-x: hidden;
+
+  // height: 100%;
   min-height: 100vh;
-  height: 100%;
+  min-height: calc(100vh - var(--vh-offset, 0px));
 }
 
 .login--existing-user {
@@ -76,7 +82,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  // max-height: calc(100vh / 3);
 
   & p {
     cursor: pointer;
